Add new images and refine prj3 post

--- a/src/content/ideas/2023/language-models/index.mdx
+++ b/src/content/ideas/2023/language-models/index.mdx
@@ -11,9 +11,8 @@ media_subpath: '/ideas/language-models/'
 draft: false
 audience: 'All'
 image:
-  path: "./statistical-modeling.jpg"
-  alt: Statistical Modeling by D.P. Kroese and J.C.C. Chan. Statistical Modeling and Computation,
-    Springer, 2014.
+  path: "./language-model.png"
+  alt: Language Model
 ---
 
 import { Image } from "astro:assets";
