--- a/src/content/ideas/2025/gios-retro/index.mdx
+++ b/src/content/ideas/2025/gios-retro/index.mdx
@@ -10,8 +10,8 @@ draft: false
 audience: 'All'
 media_subpath: "/ideas/gios-retro/"
 image:
-  path: "./affiche-moebius-arzak-mystere-montrouge.jpg"
-  alt: 'Affiche Moebius Arzak Mystere Montrouge by Jean Giraud'
+  path: "./pizza-computer.png"
+  alt: 'Pizza Computer'
 ---
 
 import { Image } from "astro:assets";
@@ -338,6 +338,9 @@ Inter-Process Communication (IPC) provides a set of mechanisms for separate proc
   - Command-line tools for inspecting IPC facilities on a system.
   - Design considerations for using shared memory, such as segment size and management.
 </details>
+
+> [!note]
+> For a broader survey of a practical application of IPC concepts and other methods, see the [IPC project I did for this class](/ideas/2025/gios-pr3/).
 
 ### Synchronization Constructs
 
